RESOLVED FIXED198816
paddingBoxRect() is wrong with RTL scrollbars on the left
https://bugs.webkit.org/show_bug.cgi?id=198816
Summary paddingBoxRect() is wrong with RTL scrollbars on the left
Simon Fraser (smfr)
Reported 2019-06-12 17:49:50 PDT
paddingBoxRect() is wrong with RTL scrollbars on the left
Attachments
Patch (9.65 KB, patch)
2019-06-12 17:51 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2019-06-12 17:51:58 PDT
alan
Comment 2 2019-06-12 18:39:53 PDT
I'd add a test for vertical-rl/lr too.
alan
Comment 3 2019-06-12 19:08:02 PDT
So I guess not.
WebKit Commit Bot
Comment 4 2019-06-12 20:21:42 PDT
Comment on attachment 372010 [details] Patch Clearing flags on attachment: 372010 Committed r246389: <https://trac.webkit.org/changeset/246389>
WebKit Commit Bot
Comment 5 2019-06-12 20:21:43 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-06-12 20:23:35 PDT
Note You need to log in before you can comment on or make changes to this bug.