paddingBoxRect() is wrong with RTL scrollbars on the left https://bugs.webkit.org/show_bug.cgi?id=198816

Reviewed by Jon Lee.

Source/WebCore:

RenderBox::paddingBoxRect() needs to offset the left side of the box for the
vertical scrollbar, if it's placed on the left.

Test: compositing/geometry/rtl-overflow-scroll.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::paddingBoxRect const):
* rendering/RenderBox.h:
(WebCore::RenderBox::paddingBoxRect const): Deleted.
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateGeometry):
* rendering/RenderListBox.cpp:
(WebCore::RenderListBox::controlClipRect const):

LayoutTests:

* compositing/geometry/rtl-overflow-scroll-expected.html: Added.
* compositing/geometry/rtl-overflow-scroll.html: Added.


Canonical link: https://commits.webkit.org/212791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246389 268f45cc-cd09-0410-ab3c-d52691b4dbfc